--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1120,7 +1120,11 @@ form input[type="submit"]:focus {
     font-weight: 400;
 }
 
-http://kute-themes.com/html/boutique/html/index.html
-https://template.hasthemes.com/noraure/noraure/index.html
-https://preview.hasthemes.com/xoss-preview/xoss/index.html
+.login button,.singup button {
+  background: #ff434e !important;
+  padding: 8px 25px;
+  border-radius: 5px;
+  color: #fff;
+  border: 2px solid #000;
+}
 
