--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,6 +68,27 @@ h2 {
     margin: 10px auto 10px;
 }
 
+.login-button{
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+}
+button.appointment-btn {
+  
+  margin: 0 15px !important;
+}
+.appointment-btn {
+  margin-left: 25px;
+  background: #f7444e;
+  color: #fff;
+  border-radius: 50px;
+  padding: 10px 35px;
+  white-space: nowrap;
+  transition: 0.3s;
+  font-size: 14px;
+  display: inline-block;
+}
+
 .heading_container h2 span {
   color: #f7444e;
 }
