--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1164,3 +1164,17 @@ form input[type="submit"]:focus {
   border: 2px solid #000;
 }
 
+.box-img {
+  width: 150px !important;
+  height: 150px !important;
+}
+.box-img img {
+  height: 150px !important;
+}
+
+.cat-view-box {
+  text-align: center;
+}
+section.catagory-view .row{
+justify-content: space-around;
+}
