--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1166,10 +1166,10 @@ form input[type="submit"]:focus {
 
 .box-img {
   width: 150px !important;
-  height: 150px !important;
+  height: 110px !important;
 }
 .box-img img {
-  height: 150px !important;
+  height: 110px !important;
 }
 
 .cat-view-box {
@@ -1177,4 +1177,7 @@ form input[type="submit"]:focus {
 }
 section.catagory-view .row{
 justify-content: space-around;
+}
+h4.cat-box-title {
+  font-size: 18px;
 }
