--- a/public/css/style.css
+++ b/public/css/style.css
@@ -518,7 +518,7 @@ a:focus {
 }
 
 .product_section .options .option1:hover {
-  background-color: transparent;
+  background-color: #fff;
   color: #f7444e;
 }
 
@@ -529,7 +529,7 @@ a:focus {
 }
 
 .product_section .options .option2:hover {
-  background-color: transparent;
+  background-color: #fff;
   color: #000000;
 }
 
